minikube_joao/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minikube-joao-ingress
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name:  minikube-joao-ingress
            port:
              number: 4000
